--- a/app/build.gradle
+++ b/app/build.gradle
@@ -314,6 +314,6 @@ dependencies {
     compile(name: rootProject.ext.cySdk, ext: 'aar')
     //自己写的 apt
     compile project(':annotation')
-    apt project(':compiler')
+    apt files('../poet.jar')
 }
 
