--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,12 @@ buildscript {
     dependencies {
 //        classpath 'com.android.tools.build:gradle:2.2.0-alpha1'
         //要对应java1.8，2.2.0才能使用unit测试。idea/misc.xml
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.7'
+        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
     }
 }
 
