--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,8 @@ android {
                                 AUTHORITY          : "com.cylan.jiafeigou",
                                 QQ_APP_KEY         : "1103156296",
                                 weChat_APP_ID      : "wx3081bcdae8a842cf",
-                                VKEY               : "Cd6DEgRvX92xAXRIkUexWDPxzTwKqHK3",
-                                VID                : "003J",
+                                VKEY               : "tVN2fxGbUn6Hw1FNq9TFWJdQ4ClqH4Hb",
+                                VID                : "0001",
                                 NICELY_SINA_APP_KEY: "1315129656"]
         customVersionCode
         versionName "1.0"
@@ -209,8 +209,8 @@ android {
                                     AUTHORITY          : ".test",
                                     QQ_APP_KEY         : "xxx",
                                     weChat_APP_ID      : "xxx",
-                                    VKEY               : "kjSle3yL8XPYlobnG4GstpeI8rwNKGj9",
-                                    VID                : "0H7A",
+                                    VKEY               : "tVN2fxGbUn6Hw1FNq9TFWJdQ4ClqH4Hb",
+                                    VID                : "0001",
                                     NICELY_SINA_APP_KEY: "xxx"]
         }
 
@@ -222,7 +222,7 @@ android {
                                     QQ_APP_KEY         : "1103156296",
                                     weChat_APP_ID      : "wx3081bcdae8a842cf",
                                     VKEY               : "Cd6DEgRvX92xAXRIkUexWDPxzTwKqHK3",
-                                    VID                : "00PZ",
+                                    VID                : "0001",
                                     NICELY_SINA_APP_KEY: "1315129656"]
         }
         _yf {
@@ -231,7 +231,7 @@ android {
                                     MAT_VALUE          : getMtaAppKey("yf"),
                                     AUTHORITY          : ".yf",
                                     VKEY               : "sXQHsCIxIOmOEX7k0nBxf0FNbbetSVRK",
-                                    VID                : "00PZ",
+                                    VID                : "0001",
                                     QQ_APP_KEY         : "xxx",
                                     weChat_APP_ID      : "xxx",
                                     NICELY_SINA_APP_KEY: "xxx"]
@@ -245,7 +245,7 @@ android {
                                     QQ_APP_KEY         : "xxx",
                                     weChat_APP_ID      : "wx382033a16e5cc4a5",
                                     VKEY               : "Cd6DEgRvX92xAXRIkUexWDPxzTwKqHK3",
-                                    VID                : "003J",
+                                    VID                : "0001",
                                     NICELY_SINA_APP_KEY: "xxx"]
         }
     }
