视频详情页优化-微信

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -224,6 +224,11 @@
             android:theme="@style/MediaActivityTransition"
             android:windowSoftInputMode="adjustPan|stateHidden"/>
 
+        <activity
+            android:name=".n.view.cam.CamDelayRecordActivity"
+            android:theme="@style/CamDelayRecordStyle">
+        </activity>
+
         <service
             android:name=".n.engine.DownloadService"
             android:enabled="true"
