--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -285,6 +285,7 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".support.photoselect.ClipImageActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
         <service
