--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,106 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.cylan.jiafeigou"
-          android:versionCode="999"
-          android:versionName="888">
-
+    package="com.cylan.jiafeigou"
+    android:versionCode="999"
+    android:versionName="888">
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="23"/>
+        android:targetSdkVersion="23" />
 
     <supports-screens
         android:anyDensity="true"
         android:largeScreens="true"
         android:normalScreens="true"
         android:smallScreens="true"
-        android:xlargeScreens="true"/>
+        android:xlargeScreens="true" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.RESTART_PACKAGES"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RESTART_PACKAGES" />
 
-    <uses-feature android:name="android.hardware.camera"/>
-    <uses-feature android:name="android.hardware.camera.autofocus"/>
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    <uses-feature android:name="android.hardware.microphone "/>
+    <uses-feature android:name="android.hardware.microphone " />
 
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_LOGS"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <uses-feature android:name="android.hardware.wifi"/>
+    <uses-feature android:name="android.hardware.wifi" />
 
-    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
-    <uses-permission android:name="android.permission.GET_TASKS"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
-    <uses-permission android:name="android.permission.FLASHLIGHT"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <uses-feature
         android:name="android.hardware.location.gps"
-        android:required="false"/>
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.location"
-        android:required="false"/>
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.telephony"
-        android:required="false"/>
+        android:required="false" />
 
     <application
-        android:name="com.cylan.jiafeigou.n.base.BaseApplication"
+        android:name=".n.base.BaseApplication"
         android:configChanges="locale|orientation|keyboardHidden"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="TA_APPKEY"
-            android:value="${MAT_VALUE}"/>
+            android:value="${MAT_VALUE}" />
         <!-- server address -->
         <meta-data
             android:name="ServerAddress"
-            android:value="${NICELY_VALUE}"/>
+            android:value="${NICELY_VALUE}" />
 
         <!-- your vid getString must "\ " -->
         <meta-data
             android:name="vid"
-            android:value="${VID}"/>
-
+            android:value="${VID}" />
         <meta-data
             android:name="vkey"
-            android:value="${VKEY}"/>
-
+            android:value="${VKEY}" />
         <meta-data
             android:name="sina_app_key"
-            android:value="${NICELY_SINA_APP_KEY}"/>
-
+            android:value="${NICELY_SINA_APP_KEY}" />
         <meta-data
             android:name="qqAppKey"
-            android:value="${QQ_APP_KEY}"/>
-
+            android:value="${QQ_APP_KEY}" />
         <meta-data
             android:name="weChatAppId"
-            android:value="${weChat_APP_ID}"/>
-
+            android:value="${weChat_APP_ID}" />
 
         <activity
             android:name=".SmartcallActivity"
@@ -108,9 +102,9 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -118,12 +112,12 @@
             android:launchMode="singleTask"
             android:noHistory="true">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="tencent1103156296"/>
+                <data android:scheme="tencent1103156296" />
             </intent-filter>
         </activity>
         <activity
@@ -131,92 +125,93 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <receiver android:name=".n.base.BaseApplication$BootCompletedReceiver">
             <intent-filter android:priority="0x7fffffff">
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
-                <action android:name="android.intent.action.USER_PRESENT"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
-        <!--////////////////////////tray/////////////////////////////-->
+        <!-- ////////////////////////tray///////////////////////////// -->
         <provider
             android:name=".support.sp.provider.TrayContentProvider"
             android:authorities="com.cylan.jiafeigou${AUTHORITY}"
             android:exported="false"
-            android:multiprocess="false"/>
+            android:multiprocess="false" />
+
         <meta-data
             android:name="AUTHORITY"
-            android:value="com.cylan.jiafeigou${AUTHORITY}"/>
-        <!--/////////////////////////////////////////////////////-->
+            android:value="com.cylan.jiafeigou${AUTHORITY}" />
+        <!-- ///////////////////////////////////////////////////// -->
         <service
             android:name=".n.engine.DataSourceService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
         <service
             android:name=".n.engine.DaemonService"
             android:enabled="true"
-            android:exported="true"/>
-        <!--<service android:name=".n.engine.DaemonService$InnerAssistService" />-->
+            android:exported="true" />
+        <!-- <service android:name=".n.engine.DaemonService$InnerAssistService" /> -->
 
         <activity
             android:name=".n.view.activity.BindDeviceActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".n.view.activity.CameraLiveActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".n.view.activity.CamSettingActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".n.view.activity.MagLiveActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".n.view.bell.DoorBellHomeActivity"
             android:configChanges="locale|orientation|keyboardHidden"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".n.view.bell.BellLiveActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".n.view.activity.CloudLiveActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
+            android:windowSoftInputMode="adjustPan|stateHidden" />
 
-        <!--&lt;!&ndash; 一个空的service，辅助启动bell_call进程。 &ndash;&gt;-->
-        <!--<service-->
-        <!--android:name=".n.engine.SimpleHelperIntentService"-->
-        <!--android:exported="false" />-->
+        <!-- &lt;!&ndash; 一个空的service，辅助启动bell_call进程。 &ndash;&gt; -->
+        <!-- <service -->
+        <!-- android:name=".n.engine.SimpleHelperIntentService" -->
+        <!-- android:exported="false" /> -->
 
         <activity
             android:name=".n.view.activity.MediaActivity"
@@ -224,15 +219,14 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/MediaActivityTransition"
-            android:windowSoftInputMode="adjustPan|stateHidden"/>
-
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".n.view.cam.CamDelayRecordActivity"
             android:theme="@style/CamDelayRecordStyle">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -240,66 +234,59 @@
             android:name=".n.engine.DownloadService"
             android:enabled="true"
             android:exported="true"
-            android:process=":download"/>
+            android:process=":download" />
 
         <activity
             android:name=".n.view.misc.UpdateActivity"
             android:process=":download"
-            android:theme="@style/dialog_activity_style"/>
+            android:theme="@style/dialog_activity_style" />
 
         <service
             android:name=".n.engine.CloudLiveService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <activity
             android:name="com.sina.weibo.sdk.component.WeiboSdkBrowser"
             android:configChanges="keyboardHidden|orientation"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize"/>
-
-        <activity android:name=".n.view.activity.CloudLiveReturnCallActivity"/>
-
-        <activity android:name=".n.view.activity.CloudLiveCallInActivity"/>
-        <!--将WXEntryActivity设置为透明 android:theme="@android:style/Theme.Translucent"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".n.view.activity.CloudLiveReturnCallActivity" />
+        <activity android:name=".n.view.activity.CloudLiveCallInActivity" />
+        <!--
+            将WXEntryActivity设置为透明 android:theme="@android:style/Theme.Translucent"
             这样就解决了，微信分享成功后，跳转到指定WXEntryActivity，显示微信分享信息，
-            而给用户视觉效果就在当前界面。-->
+            而给用户视觉效果就在当前界面。
+        -->
         <activity
             android:name=".wxapi.WXEntryActivity"
             android:exported="true"
-            android:theme="@style/wechat_share"/>
+            android:theme="@style/wechat_share" />
 
-        <!--相册选择勾出-->
-        <activity
-            android:name=".support.galleryfinal.PhotoSelectActivity"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".support.galleryfinal.PhotoEditActivity"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".support.galleryfinal.PhotoPreviewActivity"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"
-            />
         <activity
             android:name=".support.photoselect.activities.AlbumSelectActivity"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".support.photoselect.activities.ImageSelectActivity"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".support.photoselect.ClipImageActivity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
         <service
             android:name=".n.engine.AfterLoginService"
-            android:exported="false"/>
+            android:exported="false" />
+
+        <activity
+            android:name=".n.view.media.CamMediaActivity"
+            android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/CamActivityTheme"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
     </application>
 
 </manifest>
