--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -202,6 +202,7 @@
             android:windowSoftInputMode="adjustPan|stateHidden"/>
         <activity
             android:name=".n.view.activity.CloudLiveActivity"
+            android:launchMode="singleTop"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
