--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-}
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+}
