--- a/app/build.gradle
+++ b/app/build.gradle
@@ -260,6 +260,11 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    //这种方式可以解决:Warning:Conflict with dependency 'com.google.guava:guava'. Resolved versions for app (18.0) and test app (19.0) differ. See http://g.co/androidstudio/app-test-app-conflict for details.
+    configurations.all {
+        resolutionStrategy.force 'com.google.guava:guava:19.0', 'com.android.support:support-annotations:23.3.0'
+    }
+
     //////////////test///////////////////////
     //testCompile和androidTestCompile的区别在于，测试文件所在的目录。
     //前者在test/，后者在androidTest
@@ -271,7 +276,7 @@ dependencies {
     androidTestCompile rootProject.ext.testRules
     androidTestCompile rootProject.ext.testRunner
     //强制使用高版本，引用rootProject.ext.annotation，无效
-    androidTestCompile 'com.android.support:support-annotations:23.3.0'
+//    androidTestCompile 'com.android.support:support-annotations:23.3.0'
     androidTestCompile(rootProject.ext.testEspresso, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -318,6 +323,7 @@ dependencies {
     compile(name: rootProject.ext.cySdk, ext: 'aar')
     //自己写的 apt
     compile project(':annotation')
+    compile project(':compiler')
 
     compile 'com.danikula:videocache:2.6.4'
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
