--- a/app/build.gradle
+++ b/app/build.gradle
@@ -258,23 +258,27 @@ repositories {
     }
 }
 
+configurations.all{
+    resolutionStrategy.force 'com.google.guava:guava:19.0','com.android.support:support-annotations:23.3.0'
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //////////////test///////////////////////
     //testCompile和androidTestCompile的区别在于，测试文件所在的目录。
     //前者在test/，后者在androidTest
-//    testCompile rootProject.ext.testRobolectric
-//    testCompile rootProject.ext.testAssertj
-//    testCompile rootProject.ext.testJunit4
-//    testCompile rootProject.ext.annotation
-//    testCompile rootProject.ext.testMockio
-//    androidTestCompile rootProject.ext.testRules
-//    androidTestCompile rootProject.ext.testRunner
+    testCompile rootProject.ext.testRobolectric
+    testCompile rootProject.ext.testAssertj
+    testCompile rootProject.ext.testJunit4
+    testCompile rootProject.ext.annotation
+    testCompile rootProject.ext.testMockio
+    androidTestCompile rootProject.ext.testRules
+    androidTestCompile rootProject.ext.testRunner
     //强制使用高版本，引用rootProject.ext.annotation，无效
-//    androidTestCompile 'com.android.support:support-annotations:23.3.0'
-//    androidTestCompile(rootProject.ext.testEspresso, {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
+    androidTestCompile 'com.android.support:support-annotations:23.3.0'
+    androidTestCompile(rootProject.ext.testEspresso, {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     /////////////////android///////////////////////
     compile rootProject.ext.appcompat
     compile rootProject.ext.appSupport
