--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,9 @@ buildscript {
     dependencies {
 //        classpath 'com.android.tools.build:gradle:2.2.0-alpha1'
         //要对应java1.8，2.2.0才能使用unit测试。idea/misc.xml
+        //gradle 2.2.0+之后,已经官方支持annotationProcessor,所以不需要neenbedankt插件了
         classpath 'com.android.tools.build:gradle:2.2.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.7'
