--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://dl.bintray.com/eastern/maven/'
+        }
     }
 }
 
