把部分appKey放到native方法中+隐藏符号表的方式来保护appKey

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,6 @@ def releaseTime() {
 def getPackageName() {
     return "JiafeigouPlayer"
 }
-//腾讯mtakey
-def getMtaAppKey(String variantName) {
-    if (variantName.equals("zhongxing"))
-        return "ATQ1JV694AKT"
-    return "Aqc1103156296"
-}
 //从version.properties中读取versionName
 def getCustomVersionName() {
     Properties properties = new Properties()
@@ -76,13 +70,6 @@ android {
         applicationId "com.cylan.jiafeigou"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-//        manifestPlaceholders = [NICELY_VALUE       : "yun.jfgou.com:443",
-//                                MAT_VALUE          : getMtaAppKey("yun"),
-//                                QQ_APP_KEY         : "1103156296",
-//                                weChat_APP_ID      : "wx3081bcdae8a842cf",
-//                                VKEY               : "Cd6DEgRvX92xAXRIkUexWDPxzTwKqHK3",
-//                                VID                : "003J",
-//                                NICELY_SINA_APP_KEY: "1315129656"]
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -92,7 +79,15 @@ android {
         }
 
     }
-
+    externalNativeBuild {
+        cmake {
+            path 'CMakeLists.txt'
+        }
+    }
+    sourceSets.main {
+        jniLibs.srcDir 'src/main/libs' //set .so files location to libs instead of jniLibs
+        jni.srcDirs = [] //disable automatic ndk-build call
+    }
     lintOptions {
         abortOnError false
     }
@@ -197,45 +192,33 @@ android {
     productFlavors {
         _test1 {
             applicationIdSuffix ".test1"
-            manifestPlaceholders = [NICELY_VALUE       : "test1.jfgou.com:443",
-                                    MAT_VALUE          : getMtaAppKey("test1"),
-                                    QQ_APP_KEY         : "xxx",
-                                    weChat_APP_ID      : "xxx",
-                                    VKEY               : "kjSle3yL8XPYlobnG4GstpeI8rwNKGj9",
-                                    VID                : "0H7A",
-                                    NICELY_SINA_APP_KEY: "xxx"]
+            manifestPlaceholders = [NICELY_VALUE: "test1.jfgou.com:443",
+                                    VKEY        : "kjSle3yL8XPYlobnG4GstpeI8rwNKGj9",
+                                    VID         : "0H7A",
+            ]
         }
 
         _yun {
             //官方运营
-            manifestPlaceholders = [NICELY_VALUE       : "yun.jfgou.com:443",
-                                    MAT_VALUE          : getMtaAppKey("yun"),
-                                    QQ_APP_KEY         : "1103156296",
-                                    weChat_APP_ID      : "wx3081bcdae8a842cf",
-                                    VKEY               : "Cd6DEgRvX92xAXRIkUexWDPxzTwKqHK3",
-                                    VID                : "\\ 0001",
-                                    NICELY_SINA_APP_KEY: "1315129656"]
+            manifestPlaceholders = [NICELY_VALUE: "yun.jfgou.com:443",
+                                    VKEY        : "Cd6DEgRvX92xAXRIkUexWDPxzTwKqHK3",
+                                    VID         : "\\ 0001",
+            ]
         }
         _yf {
             applicationIdSuffix ".yf"
-            manifestPlaceholders = [NICELY_VALUE       : "yf.jfgou.com:443",
-                                    MAT_VALUE          : getMtaAppKey("yf"),
-                                    VKEY               : "DOHMVTgJCr0vSE0S5bBB2B3usOgnkbYz",
-                                    VID                : "003H",
-                                    QQ_APP_KEY         : "1103156296",
-                                    weChat_APP_ID      : "wx3081bcdae8a842cf",
-                                    NICELY_SINA_APP_KEY: "xxx"]
+            manifestPlaceholders = [NICELY_VALUE: "yf.jfgou.com:443",
+                                    VKEY        : "DOHMVTgJCr0vSE0S5bBB2B3usOgnkbYz",
+                                    VID         : "003H",
+            ]
         }
         //中性包
         _zhongxing {
             applicationIdSuffix ".zhongxing"
-            manifestPlaceholders = [NICELY_VALUE       : "yun.jfgou.com:443",
-                                    MAT_VALUE          : getMtaAppKey("zhongxing"),
-                                    QQ_APP_KEY         : "xxx",
-                                    weChat_APP_ID      : "wx382033a16e5cc4a5",
-                                    VKEY               : "Cd6DEgRvX92xAXRIkUexWDPxzTwKqHK3",
-                                    VID                : "003J",
-                                    NICELY_SINA_APP_KEY: "xxx"]
+            manifestPlaceholders = [NICELY_VALUE: "yun.jfgou.com:443",
+                                    VKEY        : "Cd6DEgRvX92xAXRIkUexWDPxzTwKqHK3",
+                                    VID         : "003J",
+            ]
         }
     }
 }
